Fix minor (unobservable) bug in ArrayIterator::next() https://bugs.webkit.org/show_bug.cgi?id=124061

Reviewed by Beth Dakin.

I noticed this while reading the array iterator code.  Due to how
ArrayIterator::next() and our enumeration behaviour is implemented
this is not actually a code path that can be hit.  But in order to
future proof this it should be correct.

* runtime/JSArrayIterator.cpp:
(JSC::arrayIteratorNext):

Canonical link: https://commits.webkit.org/142245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158940 268f45cc-cd09-0410-ab3c-d52691b4dbfc